#SET(BUILD_CGI_APP 1)

IF (BUILD_CGI_APP)
  SET(CMAKE_BUILD_TYPE MinSizeRel)
ELSE ()
  SET(CMAKE_BUILD_TYPE Release)
ENDIF ()

IF (CMAKE_BUILD_TYPE)
  SET (BUILD_TYPE ${CMAKE_BUILD_TYPE})
ELSE ()
  SET (BUILD_TYPE RelWithDebInfo) # options are: Release, Debug, RelWithDebInfo, MinSizeRel, Coverage
ENDIF ()

IF (BUILD_CGI_APP)
  SET(project_build_static 1)
ELSE ()
  SET(project_build_shared 1)
ENDIF ()

IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/output)
  FILE (MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/output)
ENDIF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/output)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)
PROJECT (bcpost CXX)
SET (APPLICATION_NAME "BeeCAM Postprocessor")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2019-2020")
SET (APPLICATION_VERSION_MAJOR 0)
SET (APPLICATION_VERSION_MINOR 1)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE "${BUILD_TYPE}")

SET (APPLICATION_VENDOR_ID "BCS")
SET (APPLICATION_VENDOR_NAME "BeeCAM Solutions")
SET (APPLICATION_VENDOR_URL "beecamsolutions.com")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

IF(POLICY CMP0046)
  cmake_policy(SET CMP0046 OLD)
ENDIF(POLICY CMP0046)

INCLUDE (${CMAKE_CURRENT_SOURCE_DIR}/tools/cmake/DetectDistro.cmake)
IF (CMAKE_CROSSCOMPILING)
  SET (AUTORUN_TESTS FALSE)
ENDIF (CMAKE_CROSSCOMPILING)
MESSAGE( STATUS "Running on ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR}" )
MESSAGE( STATUS "Build type: " ${BUILD_TYPE} )
MESSAGE( STATUS "CMake Build type: " ${CMAKE_BUILD_TYPE} )

SET (SHOW_STATS FALSE)
#
# Process and Library Names
#
SET (LIBPARSER_NAME pp)
SET (LIBPARSER_NAME_SHARED ${LIBPARSER_NAME}-shared)
SET (LIBPARSER_NAME_STATIC ${LIBPARSER_NAME}-static)
SET (LIBPARSER_NAME_UNITTEST ${LIBPARSER_NAME}-unittest)

SET (BCPOST_NAME bcpost)

#
# Build verbose mode
#
SET (CMAKE_VERBOSE_MAKEFILE 0) # Set 1 for debugging or "make VERBOSE=1"

#
# Project Output Paths
#
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
  SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/bin")
ELSE()
  SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/x64/Debug")
  SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/x64/Debug")
ENDIF()

#
# Project Install Paths
#
SET (EXECUTABLE_INSTALL_PATH "bin")
SET (LIBRARY_INSTALL_PATH "bin")
#
# Project Search Paths
#
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}")
LIST (APPEND CMAKE_PREFIX_PATH "${MAINFOLDER}/tools")
LIST (APPEND CMAKE_MODULE_PATH "${MAINFOLDER}/tools/cmake")
INCLUDE_DIRECTORIES("${MAINFOLDER}/pp")
#INCLUDE_DIRECTORIES("${MAINFOLDER}/pp/interface")
#INCLUDE_DIRECTORIES("${MAINFOLDER}/pp/parser")

#
# Locate Project Prerequisites
#
FIND_PACKAGE (GCCVersion 6.0.0 REQUIRED)
FIND_PACKAGE (Threads REQUIRED)
FIND_PACKAGE (Boost 1.56 COMPONENTS "program_options" REQUIRED)
FIND_PACKAGE (CppUnit REQUIRED)
IF (NOT project_build_static)
  ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
ENDIF ()
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  FIND_PACKAGE(VALGRIND REQUIRED)
  SET(VALGRIND_CONFIG --leak-check=full)
ENDIF()
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

#
# Verify the compiler supports C++17
#
INCLUDE (CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
IF (COMPILER_SUPPORTS_CXX17)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
ELSE (COMPILER_SUPPORTS_CXX17)
  MESSAGE (FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++17 support. Please use a different C++ compiler.")
ENDIF(COMPILER_SUPPORTS_CXX17)

#
# Use ccache
#
IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
  SET_PROPERTY(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
ENDIF ()

#
# Set compiler flags and build type
#
SET(RT rt)
IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -fmessage-length=0 -rdynamic -Wno-multichar -Wfatal-errors -Wno-write-strings")
ELSE()
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -fmessage-length=0 -Wno-multichar -Wfatal-errors -Wno-write-strings -Wno-maybe-uninitialized")
ENDIF()
IF (project_build_static)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static -s -ffunction-sections -fdata-sections -Wl,--gc-sections")
ENDIF (project_build_static)
IF (SHOW_STATS)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftime-report")
ENDIF (SHOW_STATS)
IF (NOT BUILD_CGI_APP)
  SET (CMAKE_CXX_OPTIMIZATION_FLAGS "-mavx2")
ENDIF ()
#SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g3")
SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_OPTIMIZATION_FLAGS}")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${CMAKE_CXX_OPTIMIZATION_FLAGS}")
SET (CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${CMAKE_CXX_OPTIMIZATION_FLAGS}")

SET (CMAKE_BUILD_TYPE "${BUILD_TYPE}") # options are: Release, Debug, RelWithDebInfo, MinSizeRel, Coverage
# To run i.e. Debug build from command-line: "cd build;cmake -D CMAKE_BUILD_TYPE=Debug ..;cd ..;make;"

#
# Add Build Targets
#

# Libraries
ADD_SUBDIRECTORY(pp)

# Processes
ADD_SUBDIRECTORY(bcpost)

enable_testing ()
# Library unit tests
ADD_SUBDIRECTORY(pp_test)

if (CMAKE_BUILD_TYPE STREQUAL "Coverage")
  include(CodeCoverage)
  setup_target_for_coverage(NAME coverage EXECUTABLE ${MAINFOLDER}/bin/${LIBPARSER_NAME_UNITTEST})

  APPEND_COVERAGE_COMPILER_FLAGS()
endif() #CMAKE_BUILD_TYPE STREQUAL "Coverage"

# When "clean" target is run, remove the following directories/files
SET_PROPERTY(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${MAINFOLDER}/bin/.debug")
